--- a/app.json
+++ b/app.json
@@ -32,10 +32,20 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "48a45063-8177-4dab-8120-1185979814be"
+      }
+    },
+    "owner": "mamboespacio"
   }
 }
