--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.7",
+    "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
