--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/api/:match*",
+      "destination": "/api-server/api/:match*"
+    },
+    {
+      "source": "/:match*",
+      "destination": "/mobile/dist/:match*"
+    }
   ]
 }
