update build command for expo > 49

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "build": "npx expo export --platform web --output dist",
+    "build": "npx expo export --platform web --output-dir dist",
     "dev": "expo start --web"
   },
   "jest": {
