--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:api": "cd api-server && npx prisma migrate dev --name init && npx prisma db seed && npm run dev",
     "prisma:migrate": "cd api-server && npx prisma migrate dev",
     "prisma:studio": "cd api-server && npx prisma studio",
-    "build": "npm run build:api && npm run build:web",
+    "build": "npx prisma migrate deploy && npx prisma db seed && next build",
     "build:api": "cd api-server && npm install && npm run build",
     "build:web": "cd mobile && npm install && expo export --platform web -o dist"
   }
